Allow selecting boundary limits on python export

save, now accepts an optional bouding region to set
export area.

Differential Revision: https://phabricator.kde.org/D20573

BUG:404615